# wypst

./: .gitignore  LICENSE  Makefile  README.md  esbuild.config.mjs  index.html  lib.a11486174fb9272eca40.js  lib.a11486174fb9272eca40.js.map  package-lock.json  package.json  scripts.config.js  src_core_pkg_core_js.e03d117c0988ed3fc1e8.js  src_core_pkg_core_js.e03d117c0988ed3fc1e8.js.map  webpack.config.js  wypst.js
.github/workflows/: static.yml
lib/: README.md
lib/katex/: katex.js
lib/katex/src/: Lexer.js  MacroExpander.js  Namespace.js  Options.js  ParseError.js  Parser.js  Settings.js  SourceLocation.js  Style.js  Token.js  buildCommon.js  buildHTML.js  buildMathML.js  buildTree.js  defineEnvironment.js  defineFunction.js  defineMacro.js  delimiter.js  domTree.js  environments.js  fontMetrics.js  functions.js  macros.js  mathMLTree.js  parseNode.js  parseTree.js  spacingData.js  stretchy.js  svgGeometry.js  symbols.js  tree.js  types.js  unicodeScripts.js  unicodeSymbols.js  units.js  utils.js  wide-character.js
scripts/: symbol_gen.js
src/: debug.html  debug.js  lib.js  settings.js  utils.js
src/core/: Cargo.toml
src/core/pkg/: core.d.ts  core.js  core_bg.wasm.d.ts  package.json
src/core/src/: content.rs  converter.rs  ext.rs  lib.rs  main.rs  node.rs  symbol.rs  tree.rs  utils.rs
src/core/src/katex/: constructor.rs  mod.rs  node.rs  source.rs  symbol.rs  types.rs
src/katex/: katex.js  package-lock.json  package.json  webpack.config.js
test/: index.css  index.html  index.js  package-lock.json  package.json  test.js  utils.js  webpack.config.js
(+52 files in other folders)
